[project]
name = "multipost-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
